--- a/sass/themes/base/_roomchat.sass
+++ b/sass/themes/base/_roomchat.sass
@@ -14,16 +14,16 @@
 		padding: 0px
 		border: none
 		cursor: pointer
-		@extend .ts-shift-main
-		@include tt-gear(35px, -519px)
+		@extend .ts-main-filter
+		@include gear-icon(-3px)
 
 // text input
 .chat-bar
 	box-shadow: none
-	background: $base-faded
+	background: $bg-faded
 	box-sizing: border-box
 	border-bottom: none
-	border-top: 1px solid $base-inset
+	border-top: 1px solid $bg-inset
 
 	#chat-input
 		@extend .ts-text-input
