--- a/sass/themes/base/_messages.sass
+++ b/sass/themes/base/_messages.sass
@@ -2,32 +2,32 @@
 	&, &:hover, &.hover
 		border: none
 		box-shadow: none
-		background: $base-faded
+		background: $bg-faded
 		box-sizing: border-box
 
 	&:hover, &.hover
 		filter: brightness(1.2)
 
 #privateChatIcon 
-	border: 1px solid $base-faded
+	border: 1px solid $bg-faded
 	
 	.chatIcon
-		@extend .ts-shift-main
+		@extend .ts-main-filter
 
 #buddyListHeader .options-menu 
 	.nib
 		top: -2px
 
 	&.closed .nib::after
-		color: $base-inset
+		color: $bg-inset
 
 .pm-become-available
-	@extend .ts-shift-main
+	@extend .ts-main-filter
 
 .pm-unavailable-warning
 	color: $main
-	background: $base-faded
-	border-bottom: 1px solid $base-inset
+	background: $bg-faded
+	border-bottom: 1px solid $bg-inset
 
 #buddyList
 	background: $main
@@ -39,7 +39,7 @@
 	@extend .ts-gradient
 
 #buddyListTitle
-	color: $base-inset
+	color: $bg-inset
 	text-shadow: none
 	border-bottom: none
 
@@ -47,10 +47,10 @@
 	opacity: 0
 
 .pmGreyTop
-	border-top-color: $base-inset
+	border-top-color: $bg-inset
 
 	&, &:hover
-		background: $base-faded
+		background: $bg-faded
 
 	.username
 		color: $text
@@ -62,12 +62,12 @@
 		background-color: transparent
 	
 	.pmWindowIcon
-		@extend .ts-shift-main
+		@extend .ts-main-filter
 	
 	.options-menu
 		top: 4px
 		&.closed .nib::after
-			color: $base-inset
+			color: $bg-inset
 
 	&.new-message
 		&, &:hover
@@ -75,15 +75,15 @@
 			@extend .ts-gradient
 
 		.username
-			color: $base-inset
+			color: $bg-inset
 
 .message-input
 	@extend .ts-text-input
 
 .message-input-view
 	box-shadow: none
-	background: $base-faded
-	border-top: 1px solid $base-inset
+	background: $bg-faded
+	border-top: 1px solid $bg-inset
 
 #buddyListMain
 	.conversations-list
@@ -96,10 +96,10 @@
 				color: $text
 			.conversation-user-room
 				&, .conversation-user-room-link
-					color: $text-alt
+					color: $mute
 
 .message-history
 	color: $text
-	background: $base-inset
+	background: $bg-inset
 	li
 		@extend .ts-striped-list
