--- a/sass/themes/base/_popups.sass
+++ b/sass/themes/base/_popups.sass
@@ -1,60 +1,60 @@
 // tooltips
 .tipsy-inner
-	border: 1px solid $base-inset
+	border: 1px solid $bg-inset
 	@extend .ts-content-alt
 
 .tipsy-arrow
-	border: 7px dashed $base-inset
+	border: 7px dashed $bg-inset
 .tipsy-arrow-n
-	border-bottom-color: $base-alt
+	border-bottom-color: $bg-other
 .tipsy-arrow-e
-	border-left-color: $base-alt
+	border-left-color: $bg-other
 .tipsy-arrow-s
-	border-top-color: $base-alt
+	border-top-color: $bg-other
 .tipsy-arrow-w
-	border-right-color: $base-alt
+	border-right-color: $bg-other
 .outer.tipsy-arrow-n
-	border-bottom-color: $base-inset
+	border-bottom-color: $bg-inset
 .outer.tipsy-arrow-e
-	border-left-color: $base-inset
+	border-left-color: $bg-inset
 .outer.tipsy-arrow-s
-	border-top-color: $base-inset
+	border-top-color: $bg-inset
 .outer.tipsy-arrow-w
-	border-right-color: $base-inset
+	border-right-color: $bg-inset
 
 // floating menus
 #ding-menu, .floating-menu
 	box-shadow: none
-	background: $base-inset
-	border: 1px solid $base-faded
+	background: $bg-inset
+	border: 1px solid $bg-faded
 
 	.option
 		color: $text
-		box-shadow: inset 0 0 0 1px $base-faded !important
+		box-shadow: inset 0 0 0 1px $bg-faded !important
 		@extend .ts-content-mute
 
 		&.active, &.selected,
 		&.special, &.site-add
 			color: $text
-			background: $base-faded !important
+			background: $bg-faded !important
 
 		&.special:not(.disabled):hover
 			color: $main
-			background: $base-alt
+			background: $bg-other
 
 		&:not(.site-add):not(.special):not(.switch-menu.second):hover
 			color: $text
-			background: $base-hover
+			background: $bg-hover
 
 		&.switch-menu.second
-			background: $base-inset !important
+			background: $bg-inset !important
 			.text
 				top: 7px !important
-				color: $text-alt
+				color: $mute
 			&:hover .text
 				color: $main
 			.left-arrow
-				@extend .ts-shift-main
+				@extend .ts-main-filter
 
 // options menu
 .options-menu 
@@ -66,32 +66,32 @@
 		top: -4px
 		position: absolute
 		font-size: 22px
-		color: $text-alt
-		content: $cog
+		color: $mute
+		content: $open-menu
 
 	&:not(.closed) .nib
-		border-color: $base-inset
-		background-color: $base-faded
+		border-color: $bg-inset
+		background-color: $bg-faded
 
 	&not(.closed) .nib:after
 		color: $main
 
 	.options
-		background: $base-faded
-		border: 1px solid $base-inset
+		background: $bg-faded
+		border: 1px solid $bg-inset
 		box-shadow: none !important
 
 	.options .option
-		color: $text-alt
+		color: $mute
 
 		&:after
-			@extend .ts-shift-main
+			@extend .ts-main-filter
 			background-position: bottom left
 
 		&.checked
 			color: $main
-			background: $base-faded
+			background: $bg-faded
 
 		&:hover
 			color: $text
-			background: $base-hover
+			background: $bg-hover
