--- a/sass/themes/base/_setting.sass
+++ b/sass/themes/base/_setting.sass
@@ -5,18 +5,18 @@
 	.logout:before
 		height: 19px
 		margin: 0 5px 0 7px
-		@extend .ts-shift-invert
-		@include ico-bg(35px, -481px)
+		@extend .ts-full-filter
+		@include sprite(35px, -481px)
 
 	.volume-icon
 		height: 27px
-		@extend .ts-shift-main
+		@extend .ts-main-filter
 	.volume-icon.volume-level-0
-		@include ico-bg(35px, -290px)
+		@include sprite(35px, -290px)
 	.volume-icon.volume-level-1
-		@include ico-bg(35px, -268px)
+		@include sprite(35px, -268px)
 	.volume-icon.volume-level-2
-		@include ico-bg(35px, -246px)
+		@include sprite(35px, -246px)
 
 	.volume-slider
 		right: 20px
@@ -34,34 +34,34 @@
 
 
 #settings.settings-dropdown .dropdown
-	background: $base-inset
+	background: $bg-inset
 
 	&:after, &:before
-		border-bottom-color: $base-inset
+		border-bottom-color: $bg-inset
 
 	.option.link,
 	.option.split-option
 		box-shadow: none
-		border-top: 1px solid $base-faded
+		border-top: 1px solid $bg-faded
 		@extend .ts-content-mute
 
 		&.selected,
 		&:not(.split-option):hover
-			background: $base-hover
+			background: $bg-hover
 
 		.description, a
-			color: $text-alt
+			color: $mute
 			&:hover
 				color: $text
 
 	.option	.option
-		background: $base-inset
-		box-shadow: inset 0 0 0 1px $base-faded
+		background: $bg-inset
+		box-shadow: inset 0 0 0 1px $bg-faded
 
 		&:hover
-			background: $base-inset
+			background: $bg-inset
 		&:before
-			@extend .ts-shift-mute
+			@extend .ts-mute-filter
 		&.selected:before,
 		&:not(.selected):hover:before
-			@extend .ts-shift-main
+			@extend .ts-main-filter
