--- a/sass/themes/cosmic.sass
+++ b/sass/themes/cosmic.sass
@@ -1,29 +1,30 @@
-@import "../mixins"
+$main: #e668b9
+
+$text: #dad7e8
+$back: #393359
+
+$snag: #e853a6
+$join: #4abf54
+$left: #e64f4f
+$mods: #e64f4f
 
 $tint: 200deg
 
-$base: #393359
-$main: #e668b9
-$text: #dad7e8
+@import "../import"
 
-$snag: #e853a6 // pink
-$join: #4abf54 // green
-$left: #e64f4f // red
-$mods: #e64f4f // red (removed from decks, etc)
+.ts-vote-filter
+	@include shift($tint, 2, 0.7)
 
-.ts-tint-vote
-	@include tint($tint, 2, 0.7)
+.ts-room-filter
+	@include gloss($tint + 30deg, 4)
 
-.ts-tint-back
-	@include shift($tint + 30deg, 4)
+.ts-main-filter
+	@include paint($tint + 70deg, 2.7, 0.5)
 
-.ts-shift-main
-	@include recolor($tint + 70deg, 2.7, 0.5)
+.ts-full-filter
+	@include paint($tint + 70deg, 2.7, 0.45, 1)
 
-.ts-shift-invert
-	@include recolor($tint + 70deg, 2.7, 0.45, 1)
+.ts-mute-filter
+	@include paint($tint + 20deg, 1.4, 0.4)
 
-.ts-shift-mute
-	@include recolor($tint + 20deg, 1.4, 0.4)
-
-@import "base/theme"
+@import "theme"
