--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -1,7 +1,59 @@
-// the core styles
+// Always-On Styling
 
-@import "sass/mixins"
-@import "sass/global/global"
-@import "sass/global/panels"
-@import "sass/global/volume"
-@import "sass/global/toggle"
+@import "sass/import"
+@import "sass/panels"
+@import "sass/volume"
+
+#room-view
+	background: #000000
+
+.profile .section.statslink
+	text-align: center !important
+
+// song counter
+#playlist-display em 
+	line-height: 27px
+	@include abs(0, 25px)
+
+// chat additions
+.chat .message.stat:not(:hover)
+	@extend %faded
+.chat .message .timestamp
+	float: right
+	margin-top: -1px
+	font-size: 11px
+	@extend %faded
+
+// logbook
+#tsLogs
+	display: none
+	padding: 0 20px
+#tsLogs span 
+	display: block
+	padding-left: 10px
+
+// replace upload with organize
+#upload-button
+	@extend %hidden
+#tsUpload
+	border: none
+	padding: 0px
+	cursor: pointer
+	filter: invert(1)
+	@extend %faded
+	@include gear-icon()
+	@include box(21px)
+	@include rel(6px, false, false, 8px)
+
+// Feature Toggles
+body.logging #tsLogs
+	display: block
+body.no_bub .speech-bubble,
+body.no_vid .screen-content,
+body.ts_vol .dropdown-volume-container,
+body.no_aud #room-view > canvas:nth-child(4)
+	@extend %hidden
+
+// Recently Played
+body.played #queue .song.ts_played
+	box-shadow: inset -14px 0 36px -20px $played !important
