Theme background color fixes.

--- a/sass/_volume.sass
+++ b/sass/_volume.sass
@@ -15,12 +15,13 @@
 	@include sprite(35px, -229px)
 
 #tsSlider
+	height: 5px
+	width: 130px
 	outline: none
 	margin-top: -4px
 	background: $main
 	border-radius: 5px
 	-webkit-appearance: none
-	@include box(5px, 130px)
 
 	&::-webkit-slider-thumb
 		height: 15px
