--- a/sass/styles/_list.sass
+++ b/sass/styles/_list.sass
@@ -1,7 +1,7 @@
 // bulk styling
-$text-color: "#tsOptions a, .ts-tab.active, #overlay a, #pmWindows a, #topBG #content a, #maindiv .tabbed-panel a, .room-tab .num-listeners, .room-tab .flat-button:hover h3, .ts-toggle input:checked + span:after, .options-menu:not(.closed) .nib:after, .options-menu .options .option.checked, .floating-menu .option.active, .floating-menu .option.special:hover, .floating-menu .option.selected, .floating-menu .option.site-add, .floating-menu .option.switch-menu.second .text, #topBG .roomListItem .roomDJs.needed .count, #topBG #buddyList #buddyListHeader .myStats span, #topBG #buddyList .buddyListTitle .buddyCountMid, #settings.settings-dropdown .logout, .chat .message .subject:hover, .chat .message .speaker:hover, .chat .message.mention .text"
+$text-color: ".ts-about a, .ts-tab.active, #overlay a, #pmWindows a, #topBG #content a, #maindiv .tabbed-panel a, .room-tab .num-listeners, .room-tab .flat-button:hover h3, .ts-toggle input:checked + span:after, .options-menu:not(.closed) .nib:after, .options-menu .options .option.checked, .floating-menu .option.active, .floating-menu .option.special:hover, .floating-menu .option.selected, .floating-menu .option.site-add, .floating-menu .option.switch-menu.second .text, #topBG .roomListItem .roomDJs.needed .count, #topBG #buddyList #buddyListHeader .myStats span, #topBG #buddyList .buddyListTitle .buddyCountMid, #settings.settings-dropdown .logout, .chat .message .subject:hover, .chat .message .speaker:hover, .chat .message.mention .text"
 
-$border-color: "#tsPanel.active, .tab-item:active, .tab-item.selected"
+$border-color: ".tab-item:active, .tab-item.selected"
 
 $background-color: "#tsSlider, #buddyList, .overlay .modal, .overlay .modal .title, #settings .volume-slider-fill, #settings .volume-slider-knob:after, #maindiv .song-list .song .scoregood"
 
