--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -46,7 +46,7 @@
 	@include rel(6px, false, false, 8px)
 
 // Feature Toggles
-body.logging #tsLogs
+body.logger #tsLogs
 	display: block
 body.no_bub .speech-bubble,
 body.no_vid .screen-content,
