Tweak QuickText panel help.

--- a/sass/_panels.sass
+++ b/sass/_panels.sass
@@ -97,6 +97,13 @@
     border-radius: 10px
     @extend %basic
 
+  kbd
+    margin-top: 2px
+    padding: 2px 5px
+    display: inline-block
+    background: $bg-faded
+    border: 1px solid $bg-hover
+
   h3
     opacity: 0.5
     font-size: 11px
