--- a/sass/themes/_theme.sass
+++ b/sass/themes/_theme.sass
@@ -29,6 +29,8 @@
 		@extend .ts-content
 	&:nth-child(even)
 		@extend .ts-content-alt
+	&:hover
+		filter: brightness(1.1)
 	border-bottom: 1px solid $bg-faded
 
 @import "base/lobby"
