Make mention styling more obvious.

--- a/sass/styles/_base.sass
+++ b/sass/styles/_base.sass
@@ -17,6 +17,7 @@ body.th-midnight
 
   .chat .message.mention
     border-right-color: $main
+    background: rgba($main, 0.2)
 
   .board .lame-button
     filter: grayscale(1) !important
