--- a/sass/themes/base/_roomchat.sass
+++ b/sass/themes/base/_roomchat.sass
@@ -47,8 +47,7 @@
 
 	&.mention
 		border-right: 5px solid $main
-	&.mention .text
-		color: $main
+		background: rgba($main, 0.2)
 		
 	.subject:hover,
 	.speaker:hover
