Make PM Avatar bg transparent.

--- a/sass/themes/base/_messages.sass
+++ b/sass/themes/base/_messages.sass
@@ -86,6 +86,8 @@
 	border-top: 1px solid $bg-inset
 
 #buddyListMain
+	.avatar-head
+		background-color: transparent !important
 	.conversations-list
 		@extend .ts-content
 
@@ -106,6 +108,8 @@
 		@extend .ts-striped-list
 	li.status-message
 		background: $bg-faded !important
+	.avatar-head
+		background-color: transparent !important
 	+ .error-message
 		border-top: 1px solid $bg-inset
 		@extend .ts-content
