Unify dm avatar sizes.

--- a/sass/themes/base/_messages.sass
+++ b/sass/themes/base/_messages.sass
@@ -87,6 +87,7 @@
 
 #buddyListMain
 	.avatar-head
+		background-size: 42px !important
 		background-color: transparent !important
 	.conversations-list
 		@extend .ts-content
@@ -109,6 +110,7 @@
 	li.status-message
 		background: $bg-faded !important
 	.avatar-head
+		background-size: 42px !important
 		background-color: transparent !important
 	+ .error-message
 		border-top: 1px solid $bg-inset
