--- a/sass/_panels.sass
+++ b/sass/_panels.sass
@@ -149,6 +149,9 @@
   .ts-button
     @extend %panel-button
 
+  input[type="file"]
+    display: none
+
   textarea
     width: 100%
     margin-bottom: 5px
