--- a/sass/themes/base/_songlist.sass
+++ b/sass/themes/base/_songlist.sass
@@ -4,21 +4,16 @@
 	@extend .ts-content
 
 // the playlist headers
-.song-search
-	left: 33px
-
-#tsUpload
-	top: 7px
-	opacity: 1
-	height: 22px
-	@extend .ts-main-filter
-	@include sprite(35px, -519px)
 #queue-header,
 #playlist-header
 	background: $bg-faded
 	box-sizing: border-box
 	border-top: none
 	border-bottom: 1px solid $bg-inset
+
+#upload-button
+	opacity: 0.4 !important
+	@extend .ts-mute-filter
 
 #queue-header 
 	.done
