--- a/sass/themes/midnight.sass
+++ b/sass/themes/midnight.sass
@@ -24,6 +24,9 @@ $tint: 120deg
 .ts-full-filter
 	@include paint($tint + 70deg, 2.7, 0.45, 1)
 
+.ts-dark-filter
+	@include paint($tint + 70deg, 2.7, 0.25, 1)
+
 .ts-mute-filter
 	@include paint($tint + 50deg, 1.4, 0.4)
 
