--- a/sass/themes/night.sass
+++ b/sass/themes/night.sass
@@ -24,6 +24,9 @@ $tint: 0deg
 .ts-full-filter
 	@include paint($tint, 2, 0.7, 1)
 
+.ts-dark-filter
+	@include paint($tint, 2, 0.25, 1)
+
 .ts-mute-filter
 	@include paint($tint, 2, 0.7)
 
