Add import button to styles.

--- a/sass/styles/_list.sass
+++ b/sass/styles/_list.sass
@@ -11,4 +11,6 @@ $filter-main: ".ts-shift-main, #topBG .room-search-input .mag-glass, #topBG .roo
 
 $filter-full: ".ts-shift-invert, #topBG .room-list .roomListItem .roomDJs.needed .icon, #settings.settings-dropdown .logout:before"
 
+$filter-dark: ".ts-dark-filter, #upload-button button"
+
 $filter-mute: ".ts-shift-mute, #topBG .room-list .roomListItem .roomListeners .icon, #topBG .room-list .roomListItem .roomDJs:not(.needed) .icon, .header-social div, .tab-item:not(.selected):not(:hover) .tab-icon, #settings.settings-dropdown .dropdown .option .option:before, .chat-bar .chatsound"
