--- a/sass/styles/green.sass
+++ b/sass/styles/green.sass
@@ -15,6 +15,9 @@ $tint: 20deg
 %full-filter
 	@include paint($tint + 50deg, 3, 0.65, 1)
 
+%dark-filter
+	@include paint($tint + 50deg, 3, 0.35, 1)
+
 %mute-filter
 	@include paint($tint + 70deg, 1.5, 0.4)
 
