--- a/sass/styles/blue.sass
+++ b/sass/styles/blue.sass
@@ -15,6 +15,9 @@ $tint: 110deg
 %full-filter
 	@include paint($tint + 50deg, 4, 0.55, 1)
 
+%dark-filter
+	@include paint($tint + 50deg, 4, 0.35, 1)
+
 %mute-filter
 	@include paint($tint + 70deg, 2, 0.4)
 
