--- a/sass/styles/pink.sass
+++ b/sass/styles/pink.sass
@@ -15,6 +15,9 @@ $tint: 200deg
 %full-filter
 	@include paint($tint + 50deg, 3, 0.55, 1)
 
+%dark-filter
+	@include paint($tint + 50deg, 3, 0.25, 1)
+
 %mute-filter
 	@include paint($tint + 70deg, 1.5, 0.4)
 
