Restructure Sass Compilation
Move themes/styles to root folder
Restructure sass folder structure
Rename scripts folder to bash
Update bash to reflect new sass structure

--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -1,5 +1,11 @@
 // our always on elements
 
+#room-view
+	background: #000000
+
+.profile .section.statslink
+	text-align: center !important
+
 // song counter
 #playlist-display em 
 	line-height: 27px
