--- a/styles/blue.sass
+++ b/styles/blue.sass
@@ -1,4 +1,4 @@
-@import "../import"
+@import "../sass/import"
 
 $main: #008ddd
 $tint: 110deg
@@ -21,6 +21,4 @@ $tint: 110deg
 %mute-filter
 	@include paint($tint + 70deg, 2, 0.4)
 
-@import "list"
-@import "base"
-@import "none"
+@import "../sass/style"
