--- a/styles/green.sass
+++ b/styles/green.sass
@@ -1,4 +1,4 @@
-@import "../import"
+@import "../sass/import"
 
 $main: #9adb6d
 $tint: 20deg
@@ -21,6 +21,4 @@ $tint: 20deg
 %mute-filter
 	@include paint($tint + 70deg, 1.5, 0.4)
 
-@import "list"
-@import "base"
-@import "none"
+@import "../sass/style"
