--- a/themes/dark.sass
+++ b/themes/dark.sass
@@ -10,7 +10,7 @@ $mods: #e64f4f
 
 $tint: 0deg
 
-@import "../import"
+@import "../sass/import"
 
 .ts-vote-filter
 	opacity: 1
@@ -30,4 +30,4 @@ $tint: 0deg
 .ts-mute-filter
 	opacity: 1
 
-@import "theme"
+@import "../sass/theme"
