--- a/themes/midnight.sass
+++ b/themes/midnight.sass
@@ -10,7 +10,7 @@ $mods: #e64f4f
 
 $tint: 120deg
 
-@import "../import"
+@import "../sass/import"
 
 .ts-vote-filter
 	@include shift($tint, 1, 0.9)
@@ -30,4 +30,4 @@ $tint: 120deg
 .ts-mute-filter
 	@include paint($tint + 50deg, 1.4, 0.4)
 
-@import "theme"
+@import "../sass/theme"
