--- a/themes/night.sass
+++ b/themes/night.sass
@@ -10,7 +10,7 @@ $mods: #a74646
 
 $tint: 0deg
 
-@import "../import"
+@import "../sass/import"
 
 .ts-vote-filter
 	@include shift($tint, 2, 0.7)
@@ -30,4 +30,4 @@ $tint: 0deg
 .ts-mute-filter
 	@include paint($tint, 2, 0.7)
 
-@import "theme"
+@import "../sass/theme"
