Add Share In Chat Button
Add Share tab and Share function
Add Confirm To Share for accidents
Add button/toggle to HotBar
Fix bug where toggline afk hotbar toggled afk

--- a/sass/_panels.sass
+++ b/sass/_panels.sass
@@ -32,6 +32,7 @@
 .hb-qtbtn1 #qtbtn1,
 .hb-qtbtn2 #qtbtn2,
 .hb-qtbtn3 #qtbtn3,
+.hb-shared #hbShare,
 .hb-is_afk #hbIsAfk,
 .hb-auto_b #hbAutoB,
 .hb-auto_q #hbAutoQ,
